--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,201 +1,4 @@
-    <!-- <div class="container-fluid">
-        <div class="row">
-            <div class="col-lg-4 col-md-5">
-                <div class="card card-user">
-                    <div class="image">
-                        <img src="assets/img/background.jpg" alt="..."/>
-                    </div>
-                    <div class="content">
-                        <div class="author">
-                          <img class="avatar border-white" src="assets/img/faces/face-2.jpg" alt="..."/>
-                          <h4 class="title">Chet Faker<br />
-                             <a href="#"><small>@chetfaker</small></a>
-                          </h4>
-                        </div>
-                        <p class="description text-center">
-                            "I like the way you work it <br>
-                            No diggity <br>
-                            I wanna bag it up"
-                        </p>
-                    </div>
-                    <hr>
-                    <div class="text-center">
-                        <div class="row">
-                            <div class="col-md-3 col-md-offset-1">
-                                <h5>12<br /><small>Files</small></h5>
-                            </div>
-                            <div class="col-md-4">
-                                <h5>2GB<br /><small>Used</small></h5>
-                            </div>
-                            <div class="col-md-3">
-                                <h5>24,6$<br /><small>Spent</small></h5>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="header">
-                        <h4 class="title">Team Members</h4>
-                    </div>
-                    <div class="content">
-                        <ul class="list-unstyled team-members">
-                                    <li>
-                                        <div class="row">
-                                            <div class="col-xs-3">
-                                                <div class="avatar">
-                                                    <img src="assets/img/faces/face-0.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
-                                                </div>
-                                            </div>
-                                            <div class="col-xs-6">
-                                                DJ Khaled
-                                                <br />
-                                                <span class="text-muted"><small>Offline</small></span>
-                                            </div>
-
-                                            <div class="col-xs-3 text-right">
-                                                <button class="btn btn-sm btn-success btn-icon"><i class="fa fa-envelope"></i></button>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="row">
-                                            <div class="col-xs-3">
-                                                <div class="avatar">
-                                                    <img src="assets/img/faces/face-1.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
-                                                </div>
-                                            </div>
-                                            <div class="col-xs-6">
-                                                Creative Tim
-                                                <br />
-                                                <span class="text-success"><small>Available</small></span>
-                                            </div>
-
-                                            <div class="col-xs-3 text-right">
-                                                <button class="btn btn-sm btn-success btn-icon"><i class="fa fa-envelope"></i></button>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="row">
-                                            <div class="col-xs-3">
-                                                <div class="avatar">
-                                                    <img src="assets/img/faces/face-3.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
-                                                </div>
-                                            </div>
-                                            <div class="col-xs-6">
-                                                Flume
-                                                <br />
-                                                <span class="text-danger"><small>Busy</small></span>
-                                            </div>
-
-                                            <div class="col-xs-3 text-right">
-                                                <button class="btn btn-sm btn-success btn-icon"><i class="fa fa-envelope"></i></button>
-                                            </div>
-                                        </div>
-                                    </li>
-                                </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-8 col-md-7">
-                <div class="card">
-                    <div class="header">
-                        <h4 class="title">Edit Profile</h4>
-                    </div>
-                    <div class="content">
-                        <form>
-                            <div class="row">
-                                <div class="col-md-5">
-                                    <div class="form-group">
-                                        <label>Company</label>
-                                        <input type="text" class="form-control border-input" disabled placeholder="Company" value="Creative Code Inc.">
-                                    </div>
-                                </div>
-                                <div class="col-md-3">
-                                    <div class="form-group">
-                                        <label>Username</label>
-                                        <input type="text" class="form-control border-input" placeholder="Username" value="michael23">
-                                    </div>
-                                </div>
-                                <div class="col-md-4">
-                                    <div class="form-group">
-                                        <label for="exampleInputEmail1">Email address</label>
-                                        <input type="email" class="form-control border-input" placeholder="Email">
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <label>First Name</label>
-                                        <input type="text" class="form-control border-input" placeholder="Company" value="Chet">
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <label>Last Name</label>
-                                        <input type="text" class="form-control border-input" placeholder="Last Name" value="Faker">
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <div class="form-group">
-                                        <label>Address</label>
-                                        <input type="text" class="form-control border-input" placeholder="Home Address" value="Melbourne, Australia">
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="row">
-                                <div class="col-md-4">
-                                    <div class="form-group">
-                                        <label>City</label>
-                                        <input type="text" class="form-control border-input" placeholder="City" value="Melbourne">
-                                    </div>
-                                </div>
-                                <div class="col-md-4">
-                                    <div class="form-group">
-                                        <label>Country</label>
-                                        <input type="text" class="form-control border-input" placeholder="Country" value="Australia">
-                                    </div>
-                                </div>
-                                <div class="col-md-4">
-                                    <div class="form-group">
-                                        <label>Postal Code</label>
-                                        <input type="number" class="form-control border-input" placeholder="ZIP Code">
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <div class="form-group">
-                                        <label>About Me</label>
-                                        <textarea rows="5" class="form-control border-input" placeholder="Here can be your description" value="Mike">
-Oh so, your weak rhyme
-You doubt I'll bother, reading into it
-I'll probably won't, left to my own devices
-But that's the difference in our opinions.</textarea>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="text-center">
-                                <button type="submit" class="btn btn-info btn-fill btn-wd">Update Profile</button>
-                            </div>
-                            <div class="clearfix"></div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-
-
-        </div>
-    </div> -->
-
-    <p-table [columns]="cols" [value]="books" selectionMode="single" [(selection)]="selectedCar"  [paginator]="true" [rows]="15">
+    <p-table [columns]="cols" [value]="books" selectionMode="single" [(selection)]="selectedBook"  [paginator]="true" [rows]="15">
         <ng-template pTemplate="header" let-columns>
             <tr>
                 <th>ISBN</th>
@@ -210,7 +13,7 @@ But that's the difference in our opinions.</textarea>
                 <td>{{books.name}}</td>
                 <td>{{books.addedBy}}</td>
                 <td>
-                    <p-rating [(ngModel)]="books.rating" readonly="true" stars="10" [cancel]="false"></p-rating>
+                    <p-rating [(ngModel)]="books.rating" readonly="true" [cancel]="false"></p-rating>
                     
                 </td>
             </tr>
@@ -224,7 +27,7 @@ But that's the difference in our opinions.</textarea>
         
     </p-table>
     
-    <p-dialog header="Car Details" appendTo="body" [(visible)]="displayDialog" [responsive]="true" showEffect="fade" [modal]="true" [width]="500">
+    <p-dialog header="Add Your Book" appendTo="body" [(visible)]="displayDialog" [responsive]="true" showEffect="fade" [modal]="true" [width]="500">
         <div class="ui-g ui-fluid" *ngIf="BookRequest">
             <div class="ui-g-12">
                 <div class="ui-g-4">
@@ -236,27 +39,20 @@ But that's the difference in our opinions.</textarea>
             </div>
             <div class="ui-g-12">
                 <div class="ui-g-4">
-                    <label for="name">name</label>
+                    <label for="name">Book name</label>
                 </div>
                 <div class="ui-g-8">
                     <input pInputText id="name" [(ngModel)]="BookRequest.name" />
                 </div>
             </div>
-            <div class="ui-g-12">
-                <div class="ui-g-4">
-                    <label for="addedBy">addedBy</label>
-                </div>
-                <div class="ui-g-8">
-                    <input pInputText id="addedBy" [(ngModel)]="BookRequest.addedBy" />
-                </div>
-            </div>
+           
             <div class="ui-g-12">
                 <div class="ui-g-4">
                     <label for="rating">rating</label>
                 </div>
                 <div class="ui-g-8">
                     {{BookRequest.rating}}
-                    <p-rating [(ngModel)]="BookRequest.rating" stars="10" [cancel]="false"></p-rating>
+                    <p-rating [(ngModel)]="BookRequest.rating" [cancel]="false"></p-rating>
                     
                 </div>
             </div>
